...
    <string name="address_label_state_optional">State (optional)</string>
    <!--Label for input requesting zip code, used for US addreses-->
    <string name="address_label_zip_code">ZIP code</string>
    <!--Label for input requesting zip code where input is optional, used for US addresses-->
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <!--Label for input requesting postal code, used for Canadian addresses-->
    <string name="address_label_postal_code">Postal code</string>
    <!--Label for input requesting postal code where input is optional, used for Canadian addresses-->
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <!--Label for input requesting postcode, used for UK based addresses-->
    <string name="address_label_postcode">Postcode</string>
    <!--Label for input requesting postcode where input is optional, used for UK based addresses-->
    <string name="address_label_postcode_optional">Postcode (optional)</string>
...
    <!--Error text indicating that region is required, used for international addresses-->
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <!--Error text indicating that phone number is required, used for all addresses-->
    <string name="address_phone_number_required">Please enter your phone number</string>
    <!--Used to display masked card numbers. %1$s is a card brand, and %2$s is a partial call number, e.g. "Visa ending in 4242"-->
    <string name="card_ending_in">%1$s ending in %2$s</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="expiry_label_short">Expiry</string>
    <string name="invalid_card_number">Your card\'s number is invalid.</string>
    <string name="invalid_expiry_month">Your card\'s expiration month is invalid.</string>
    <string name="incomplete_expiry_date">Your card\'s expiration date is incomplete.</string>
    <string name="invalid_expiry_year">Your card\'s expiration year is invalid.</string>
    <string name="invalid_cvc">Your card\'s security code is invalid.</string>
...
